		- posts will include a "Verified" marker next to the date/IP/password hash of a post if verification was successsful
	- added a "reply to thread" link at the bottom of a thread to automatically populate the "thread id" field on the reply form
		- TODO: disable this box and go solely with this method?
	- added FAQ
	- staff now have a "Forum Mod" title under their name when posting

# December 26, 2012
	- board name, admin panel button, and version info (if enabled) are now located in a static bar at the top of the screen
	- copyright notice is now behind the main container
	- cleaned up UI
		- copyright notice is now located below page container
		- page container is no longer some weird floaty thing (why did I do that again?)

# December 24, 2012
	- passwords can now be hashed via hashPassword(str) as long as config.functions.php is included (implied when config.php is)
	- moderator posts are now saved as distinguished when they are posted to the database as opposed to at read time
	- cleaned up viewthread so it has a more reasonable font size, and usernames are now next to the correct posts

# December 23, 2012
	- moderator posts can now be made by defining a key(s) in includes/function.postmessage.php
		- Note: changing these keys will cause previously highlighted posts to become unhighlighted as it is currently
		  based on the key read from the database vs. the one in the postmessage function instead of being saved as a
		  moderator post.

# Sept 16, 2012
	- threads are now created using the next available id in the thread_index table instead of a random number 
	- viewing a forum now correctly shows thread titles and appropriate links
	
# Sept 15, 2012
	- removed thread titles from being stored in the thread table in favour of a thread_index table
	- updated install script to include creation of a thread_index table to store thread titles
	- began working on getting next AUTO_INCREMENT value from thread_index table

# Sept 9, 2012