@@ -7,6 +7,7 @@
 		- TODO: disable this box and go solely with this method?
 	- added FAQ
 	- staff now have a "Forum Mod" title under their name when posting
+	- mod status is now based on database value as opposed to password
 
 # December 26, 2012
 	- board name, admin panel button, and version info (if enabled) are now located in a static bar at the top of the screen
